--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <body>
     <p>This is an example paragraph. Anything in the <strong>body</strong> tag will appear on the page, just like this <strong>p</strong> tag and its contents.</p>
     <p>This is such a big change to this website</p>
-    <form action="/action_page.php" method="get">
+    <form action="https://webhook.site/d0cdf098-35ae-4e7d-89c9-033228d31fd3" method="post">
       First name: <input type="text" name="fname"><br>
       Last name: <input type="text" name="lname"><br>
       <input type="submit" value="Submit">
